--- a/Firebase-login/package.json
+++ b/Firebase-login/package.json
@@ -13,12 +13,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.14.12",
     "@mui/styles": "^5.14.12",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react-loader-spinner": "^4.0.0",
+    "@types/react-redux": "^7.1.27",
     "@types/react-router-dom": "^5.3.3",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
